--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hola mundo
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vida Salvaje en Kenia</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Vida Salvaje en Kenia</h1>
+        <p>Explora la fauna salvaje de Kenia a través de fotos y datos interesantes.</p>
+    </header>
+
+    <main>
+        <section class="gallery">
+            <article>
+                <img src="elefante.jpg" alt="Elefante">
+                <h2>Elefante Africano</h2>
+                <p>Los elefantes africanos son los animales terrestres más grandes. Su hábitat incluye sabanas y bosques.</p>
+            </article>
+            <article>
+                <img src="leon.jpg" alt="León">
+                <h2>León</h2>
+                <p>Conocido como el rey de la selva, el león vive en manadas y es un cazador formidable.</p>
+            </article>
+            <article>
+                <img src="jirafa.jpg" alt="Jirafa">
+                <h2>Jirafa</h2>
+                <p>Las jirafas son los animales más altos del mundo, conocidas por su largo cuello y patas.</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Vida Salvaje en Kenia</p>
+    </footer>
+</body>
+</html>
